page description added

--- a/frontend/src/app/components/sandbox/calendar/calendar.component.html
+++ b/frontend/src/app/components/sandbox/calendar/calendar.component.html
@@ -1,4 +1,6 @@
 <!-- eslint-disable @angular-eslint/template/label-has-associated-control -->
+<h2 class="page-title-centered">Calendar page</h2>
+<p class="page-description">On this page, you can practice selecting a date, a time, and a date range on calendars</p>
 <div data-testid="calendar-component">
   <div class="calendar-row">
     <div class="calendar-col">
