--- a/frontend/src/app/components/sandbox/captcha/captcha.component.html
+++ b/frontend/src/app/components/sandbox/captcha/captcha.component.html
@@ -1,3 +1,5 @@
+<h2 class="page-title-centered">Captcha page</h2>
+<p class="page-description">This page allows you to practice test automation with Google reCAPTCHA</p>
 <form
   class="captcha-box"
   (ngSubmit)="onSubmit()"
