--- a/frontend/src/app/components/sandbox/dropdowns/dropdowns.component.html
+++ b/frontend/src/app/components/sandbox/dropdowns/dropdowns.component.html
@@ -1,3 +1,5 @@
+<h2 class="page-title-centered">Dropdowns page</h2>
+<p class="page-description">On this page, you can practice choosing options from various types of dropdowns</p>
 <div data-testid="dropdowns-component">
     <div class="dropdown-row">
         <div class="dropdown-col">
