--- a/frontend/src/app/components/sandbox/iframe-component/iframe-component.component.html
+++ b/frontend/src/app/components/sandbox/iframe-component/iframe-component.component.html
@@ -1,3 +1,5 @@
+<h2 class="page-title-centered">Iframe page</h2>
+<p class="page-description">On this page, you can practice handling iframes and shadow elements</p>
 <div class="button-row">
   <!-- Regular Button -->
   <button
