--- a/frontend/src/app/components/sandbox/drag-drop/drag-drop.component.html
+++ b/frontend/src/app/components/sandbox/drag-drop/drag-drop.component.html
@@ -1,3 +1,5 @@
+<h2 class="page-title-centered">Drag and Drop page</h2>
+<p class="page-description">This page is for practicing drag and drop automation</p>
 <div class="container">
     <div class="wrapper">
         <!-- Draggable box (only shown if not dropped) -->
