--- a/frontend/src/app/components/sandbox/grid/grid.component.html
+++ b/frontend/src/app/components/sandbox/grid/grid.component.html
@@ -1,3 +1,5 @@
+<h2 class="page-title-centered">Grid page</h2>
+<p class="page-description">This page lets you practice sorting, resizing, reordering columns, and other grid actions</p>
 <div class="custom-grid">
   <ag-grid-angular [gridOptions]="gridOptions">
   </ag-grid-angular>
