home text update

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
 
     <p>This site was created for you to practice testing automation.</p>
     <p>
-      Here you will find various web elements and forms, as well as you can test
+      Here you can test various web elements and forms, as well as you can test
       authentication and request interception.
     </p>
     <p>Good luck! May the Tester Force be with us!</p>
